part2/e_2.06/deployment_ping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: saved-pings
          persistentVolumeClaim:
            claimName: pings-claim
      containers:
        - name: ping-pong
          image: desipeli/dwk-pingpong:2.01
          imagePullPolicy: Always
          volumeMounts:
          - name: saved-pings
            mountPath: /app/files/
